<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gestor Finaceiro</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--Menu-->
    <string name="menu">Menu</string>
    <string name="menu_btn_consulta">Consulta</string>
    <string name="menu_btn_cadastro">Cadastro</string>
    <string name="title_activity_cadastro">CadastroActivity</string>

    <!-- Cadastro -->
    <string name="cadastro_nome">Nome:</string>
    <string name="cadastro_vencimento">Vencimento:</string>
    <string name="cadastro_valor">Valor:</string>
    <string name="cadastro_valor_parcelado">Parcelado</string>


    <string name="title_activity_meses">Meses</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>

    <!--Login-->
    <string name="login">Login</string>
    <string name="login_edt_usuario">Usuário</string>
    <string name="login_edt_senha">Senha</string>
    <string name="login_btn_entrar">Entrar</string>

    <!--Meses-->
    <string name="janeiro">Janeiro</string>
    <string name="fevereiro">Fevereiro</string>
    <string name="marco">Março</string>
    <string name="abril">Abril</string>
    <string name="maio">Maio</string>
    <string name="junho">Junho</string>
    <string name="julho">Julho</string>
    <string name="agosto">Agosto</string>
    <string name="setembro">Setembro</string>
    <string name="outubro">Outubro</string>
    <string name="novembro">Novembro</string>
    <string name="dezembro">Dezembro</string>
</resources>
