<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background"
        android:gravity="center">

        <EditText
            android:id="@id/login_edit_usuario"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/login_edt_usuario"
            android:textColorHint="@color/silver"
            android:gravity="center"
            android:textColor="@color/white"
            android:inputType="text" />

        <EditText
            android:id="@id/login_edit_senha"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/login_edt_senha"
            android:textColorHint="@color/silver"
            android:gravity="center"
            android:textColor="@color/white"
            android:inputType="text"
            android:password="true" />

        <Button
            android:id="@id/login_btn_entrar"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/login_btn_entrar"
            android:background="@color/highlighted_text_material_dark"
            android:layout_gravity="center" />

    </LinearLayout>


</LinearLayout>