<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    tools:context=".CadastroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blackOpac"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cadastro_nome"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:paddingRight="5dp" />

                <EditText
                    android:id="@id/cadastro_edit_nome"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cadastro_valor"
                    android:textSize="20dp"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:paddingRight="5dp" />

                <EditText
                    android:id="@id/cadastro_edit_valor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cadastro_vencimento"
                    android:textSize="20dp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:paddingRight="5dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="time" />

            </LinearLayout>

            <ListView
                android:paddingTop="10dp"
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
